--- a/app/global.css
+++ b/app/global.css
@@ -1,1 +1,12 @@
 @layer reset, base, tokens, recipes, utilities;
+
+body {
+  background-color: var(--colors-slate-900);
+}
+
+h1,
+h2,
+h3,
+h4 {
+  color: var(--colors-slate-100);
+}
