--- a/app/global.css
+++ b/app/global.css
@@ -22,8 +22,9 @@ h2 {
   font-size: var(--font-sizes-3xl);
   font-weight: var(--font-weights-semibold);
 }
-h2 {
-  font-size: var(--font-sizes-2xl);
+h3 {
+  font-size: var(--font-sizes-xl);
+  font-weight: var(--font-weights-medium);
 }
 p {
   font-size: var(--font-sizes-lg);
