Remove gradient due to notch effect

--- a/app/global.css
+++ b/app/global.css
@@ -1,11 +1,7 @@
 @layer reset, base, tokens, recipes, utilities;
 
 body {
-  background: conic-gradient(
-    from 90deg at 0 0,
-    var(--colors-slate-950),
-    var(--colors-zinc-800)
-  );
+  background-color: var(--colors-slate-950);
 }
 
 h1,
